--- a/style.css
+++ b/style.css
@@ -8,6 +8,46 @@
 html{
     scroll-behavior: smooth;
 }
+
+.burger{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.burgerline{
+    width: 30px;
+    height: 3px;
+    border-radius: 5px;
+    background-color: black;
+ 
+}
+ #check{
+    display: none;
+ }
+
+ #check:checked + .nav2 {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    position:fixed ;
+    top: 0px;
+    left: 0;
+    background-color: yellow;
+    justify-content: center;
+  
+   
+ }
+ .lfb{
+    display: none;
+    position: relative;
+    z-index: 1000;
+ }
+
+ .nav2{
+    display: none;
+ }
+
+
 .firstparent{
     width: 100%;
     height: 100vh;
@@ -18,13 +58,13 @@ header{
     background-color: white;
     display: flex;
     width: 100%;
-    height: 45px;
+    height: 70px;
     position: fixed;
     top: 0;
     left:0;
     z-index: 1;
 }
-nav{
+.nav1{
     width: 50%;
     display: flex; 
     justify-content: end;
@@ -37,11 +77,13 @@ ul{
 }
 a{
     color: grey;
-    font-size: small;
+    font-size: medium;
 }
 i{
-    color: grey;
+    color:grey;
     cursor: pointer;
+    font-size: 20px;
+   
 }
 .logos{
     width: 50%;
@@ -49,6 +91,7 @@ i{
     justify-content: center;
     align-items: center;
     gap: 15px;
+ 
 }
 
 main{
@@ -56,43 +99,44 @@ main{
     background-size: cover;
     background-position: bottom;
     width: 100%;
-    height: 400px;
+    height: 1250px;
     display: flex;
     justify-content: center;
     align-items: center;
    
   
 }
-.blog{
+.blog1 {
     width: 100%;
     height:200px;
     display: flex;
     flex-direction: column;
     justify-self: center;
     align-items: center;
-    
+    margin-top: 50px;
+ 
 }
-.blog h1{
-    font-size: 60px;
+.blog1 h1{
+    font-size: 70px;
     font-family:Arial, Helvetica, sans-serif;
     text-align: center;
     color: rgb(247, 244, 244);
-    font: weight 900px;;
+    font: weight 500px;
    
 }
-p{
-        
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 150;
-    font-style: normal;   
-    font-size: small;
-    color: white;
+.blog1 p{
+        font-family: "Tuffy", sans-serif;
+        font-weight: 400;
+        font-size:18px;
+        font-style: normal;
+        color:rgb(247, 240, 240);
+      
+      
 }
 
 .para{
     width: 100%;
-    height: 95px;
+    height:50%;
     display: flex;
     flex-direction: column;
     justify-content:center;
@@ -102,17 +146,17 @@ p{
 }
 .para p{
     color:rgb(105,105,105);
-    font-size:x-small;
+    font-size:small;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     letter-spacing: 0.05em;
 }
 .photos{
+    width: 100%;
     background-color: white;
     display: flex;
-    width: 100%;
     justify-content:center;
     gap: 15px;
-    height: 200px;
+   
 }
 
 
@@ -161,8 +205,9 @@ p{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 200px;
+    /* height: 200px; */
     gap: 10px;
+   
  
 
 }
@@ -171,7 +216,8 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    /* height: 200px; */
+  
  
 }
 .line{
@@ -193,7 +239,7 @@ p{
     justify-content:center;
     align-items: center;
     width: 20%;
-    height: 200px;
+    /* height: 200px; */
     
    
 }
@@ -202,13 +248,14 @@ p{
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: 24px;
     letter-spacing: 0.03em;  
+
   }
    .textblog{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 10%;
-    padding-top: 170px;
+    /* padding-top: 100px; */
  
     
    }
@@ -221,7 +268,7 @@ p{
     margin: 0;
 
 }
-.blog{
+.blogtx{
     color: black;
     font-size: 30px;
     letter-spacing: 0.05em;
@@ -229,7 +276,7 @@ p{
     font-size: large;
     font-weight: lighter;
     position: relative;
-    right: -15px;;
+    right: -40px;
     padding: 0;
   
 }
@@ -299,8 +346,8 @@ p{
     .textsky svg{
         width: 20px;
         position: absolute;
-        bottom: 70px;
-       
+        bottom: 65px;
+
     }
     .firstcard{
         margin-top: 80px;
@@ -337,7 +384,7 @@ p{
     display: flex;
     justify-content: center;
     align-items: center;
-   
+    margin-left: 12px;
 }
 
 .ln{
@@ -348,7 +395,108 @@ p{
 }
 
 
-      
 
+.administrateur{
+    display: flex;
+    flex-direction: column;
+    padding-top: 50px;
+    margin-left: 90px;
+
+}
+.administrateur span{
+   font-size: 12px;
+   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+ 
+}
+.administrateur p{
+    font-size: 12px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.Grèce h2{
+    font-family: "EB Garamond", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-size: 24px;
+    font-style: normal;
+    color: black;  
+}
+
+    
+.creez span{
+    color: black;
+    font-weight: 200;
+    font-size: 16px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.bastext{
+    display: flex;
+    flex-direction: column;
+    margin-left: 50px;
+    gap: 10px;
+    margin-bottom: -20px;
+    
+}
+.bastext :hover{
+    color: rgb(28, 172, 230);
+}
+
+.com{
+    width: 100%;
+    display: flex;
+
+}
+.leftsvg{
+    width: 50%;
+    display: flex;
+    
+}
+.rightsvg{
+    width: 50%;
+    display: flex;
+ 
+}
+
+.comsvg{
+    width: 100%;
+    display: flex;
+    justify-content: start;
+    gap: 20px;
+    margin-left: 50px;
+}
+
+.eye{
+    display: flex;
+    gap: 5px;
+}
+.com2{
+    display: flex;
+    gap: 5px;
+}
+
+.coeur{
+    display: flex;
+    gap: 3px;
+    margin-right: 10px;
+}
+
+.coeur{ fill: transparent;
+    stroke: #e84a43;
+    stroke-width: 1.5px;
+    transition: fill .25s;}
+
+/* /////////////////////////////////////////////////////////////////////////////////////////////// */
+
+    @media screen and (max-width:900px){
+        .lfb{
+            display: flex;
+        }
+        
+        .nav1{
+            display: none;
+        }
+    }
+    
 
 
