--- a/style.css
+++ b/style.css
@@ -99,13 +99,14 @@ main{
     background-size: cover;
     background-position: bottom;
     width: 100%;
-    height: 1250px;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
    
-  
 }
+
+
 .blog1 {
     width: 100%;
     height:200px;
@@ -136,7 +137,7 @@ main{
 
 .para{
     width: 100%;
-    height:50%;
+padding: 60px 10px;
     display: flex;
     flex-direction: column;
     justify-content:center;
@@ -161,6 +162,7 @@ main{
 
 
 .voyager{
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -170,6 +172,7 @@ main{
 }
 
 .manger{
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -180,6 +183,7 @@ main{
 
 
 .relaxer{
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -207,12 +211,13 @@ main{
     width: 100%;
     /* height: 200px; */
     gap: 10px;
+    margin: 50px 0;
    
  
 
 }
 .texts{
-    width: 100%;
+    width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -238,7 +243,7 @@ main{
     display: flex;
     justify-content:center;
     align-items: center;
-    width: 20%;
+    /* width: 20%; */
     /* height: 200px; */
     
    
@@ -254,7 +259,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 10%;
+    /* width: 10%; */
     /* padding-top: 100px; */
  
     
@@ -283,7 +288,7 @@ main{
 
 
 .textplane{
-    width: 20%;
+    /* width: 20%; */
     height: 100px;
     display: flex;
     justify-content: center;
@@ -320,7 +325,6 @@ main{
 
     }
     .textsky{
-        width: 20%;
         height: 100px;
         display: flex;
         justify-content: center;
@@ -331,7 +335,6 @@ main{
     
    
     .textsky p{
-        width: 200px;
         height: 200px;
         display: flex;
         justify-content: center;
@@ -347,6 +350,7 @@ main{
         width: 20px;
         position: absolute;
         bottom: 65px;
+        right: 0;
 
     }
     .firstcard{
