--- a/style.css
+++ b/style.css
@@ -34,12 +34,23 @@ html{
     left: 0;
     background-color: yellow;
     justify-content: center;
+    flex-direction: column;
   
    
  }
+ .nav2 ul{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+ }
  .lfb{
     display: none;
-    position: relative;
+    position: fixed;
+    right: 20px;
+    top: 20px;
     z-index: 1000;
  }
 
@@ -99,13 +110,14 @@ main{
     background-size: cover;
     background-position: bottom;
     width: 100%;
-    height: 1250px;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
    
-  
 }
+
+
 .blog1 {
     width: 100%;
     height:200px;
@@ -136,12 +148,13 @@ main{
 
 .para{
     width: 100%;
-    height:50%;
+padding: 60px 10px;
     display: flex;
     flex-direction: column;
     justify-content:center;
     align-items: center;
     gap: 5px;
+    text-align: center;
   
 }
 .para p{
@@ -155,12 +168,14 @@ main{
     background-color: white;
     display: flex;
     justify-content:center;
+    flex-wrap: wrap;
     gap: 15px;
    
 }
 
 
 .voyager{
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -170,6 +185,7 @@ main{
 }
 
 .manger{
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -180,6 +196,7 @@ main{
 
 
 .relaxer{
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -207,12 +224,13 @@ main{
     width: 100%;
     /* height: 200px; */
     gap: 10px;
+    margin: 50px 0;
    
  
 
 }
 .texts{
-    width: 100%;
+    width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -221,29 +239,30 @@ main{
  
 }
 .line{
+    width: 20px;
     display: flex;
     justify-content:center;
     align-items:center;
-    padding-right: -20px;
-    transform: rotate(90deg);
+    /* padding-right: -20px; */
+
     transform-origin: center;
 }
 .orange{
     background-color: #FAC98B;
-    width: 50px;
-    height: 1px;
+    width: 1px;
+    height: 50px;
 }
 
 .ils {
     display: flex;
     justify-content:center;
     align-items: center;
-    width: 20%;
+    /* width: 20%; */
     /* height: 200px; */
     
    
 }
- .ils span { 
+ .ils  { 
     color:black;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: 24px;
@@ -254,7 +273,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 10%;
+    /* width: 10%; */
     /* padding-top: 100px; */
  
     
@@ -275,20 +294,20 @@ main{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: large;
     font-weight: lighter;
-    position: relative;
-    right: -40px;
-    padding: 0;
+    /* position: relative;
+    right: -40px; */
+    /* padding: 0; */
   
 }
 
 
 .textplane{
-    width: 20%;
     height: 100px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    position:relative;
+    
 }
 
 .textplane span{
@@ -297,8 +316,6 @@ main{
   
 }
 .textplane svg{
-    position: absolute;
-    bottom: 65px;
     transform: rotate(-30deg);
     width: 20px;
 }
@@ -320,19 +337,18 @@ main{
 
     }
     .textsky{
-        width: 20%;
         height: 100px;
         display: flex;
+        flex-direction: column;
+        align-items: end;
         justify-content: center;
-        align-items: center;
-        position:relative;
+
     }
 
     
    
     .textsky p{
-        width: 200px;
-        height: 200px;
+        /* height: 200px; */
         display: flex;
         justify-content: center;
         align-items: center;
@@ -345,10 +361,36 @@ main{
    
     .textsky svg{
         width: 20px;
-        position: absolute;
+        /* position: absolute;
         bottom: 65px;
+        right: 0; */
 
     }
+
+/* /////////////////// new */
+
+  .logosPar{
+    width: 100%;
+    background-color: #f2f2f2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 3.5%;
+    padding: 20px;
+    margin: 50px 0;
+  }
+
+.logosPar .logoSvig:nth-child(5){
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* ////////////////////////new  */
+
+
+
     .firstcard{
         margin-top: 80px;
         width: 100%;
@@ -362,7 +404,7 @@ main{
 
     .myimg{
         width:50%; 
-        height:65vh;
+        height:70vh;
         background-size: cover;
         background-image: url(https://static.wixstatic.com/media/da1004557f254d4b9d4166b1bf32c599.jpg/v1/fill/w_1682,h_1123,al_c,q_90/da1004557f254d4b9d4166b1bf32c599.webp);
     }
@@ -373,7 +415,7 @@ main{
     justify-content: start;
     gap: 35px;
     width: 50%;
-    height: 40vh;
+    height: 50vh;
     border:1px solid rgba(246, 242, 242, 0.996) ;
   
 }
@@ -496,6 +538,9 @@ main{
         .nav1{
             display: none;
         }
+        .logosPar{
+            
+            gap:25px;}
     }
     
 
