--- a/style.css
+++ b/style.css
@@ -59,12 +59,6 @@ html{
  }
 
 
-.firstparent{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
 header{
     background-color: white;
     display: flex;
@@ -216,35 +210,12 @@ main{
 
 }
 
-.mysvg{
-    background-color: #F2F2F2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    /* height: 200px; */
-    gap: 10px;
-    margin: 50px 0;
-   
- 
 
-}
-.texts{
-    width: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 50px;
-    /* height: 200px; */
-  
- 
-}
 .line{
     width: 20px;
     display: flex;
     justify-content:center;
     align-items:center;
-    /* padding-right: -20px; */
     transform-origin: center;
 }
 .orange{
@@ -257,9 +228,6 @@ main{
     display: flex;
     justify-content:center;
     align-items: center;
-    /* width: 20%; */
-    /* height: 200px; */
-    
    
 }
  .ils  { 
@@ -273,10 +241,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    /* width: 10%; */
-    /* padding-top: 100px; */
- 
-    
+
    }
 
 .voyage{
@@ -294,10 +259,10 @@ main{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: large;
     font-weight: lighter;
-    /* position: relative;
-    right: -40px; */
-    /* padding: 0; */
+    position: relative;
+    right:-40px;
   
+     /* აქ მაინც მომიწია პოზიცია */
 }
 
 
@@ -348,7 +313,6 @@ main{
     
    
     .textsky p{
-        /* height: 200px; */
         display: flex;
         justify-content: center;
         align-items: center;
@@ -361,10 +325,7 @@ main{
    
     .textsky svg{
         width: 20px;
-        /* position: absolute;
-        bottom: 65px;
-        right: 0; */
-
+       
     }
 
 /* /////////////////// new */
