--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ html{
 
 
 header{
-    background-color: white;
+    background-color: #F2F2F2;
     display: flex;
     width: 100%;
     height: 70px;
