--- a/2style.css
+++ b/2style.css
@@ -13,7 +13,7 @@ html{
 .card2{
     margin-top: 80px;
     width: 100%;
-    height:100vh;
+    /* height:100vh; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,7 +22,7 @@ html{
 }
 .myimg2{
 background-image: url(https://static.wixstatic.com/media/4d2d8fa0c42543a7b9a5ec9416597378.jpg/v1/fill/w_3760,h_2116,fp_0.50_0.50,q_90,enc_avif,quality_auto/4d2d8fa0c42543a7b9a5ec9416597378.jpg);
-width:100%; 
+width:50%; 
 height:70vh;
 background-size: cover;
 }
@@ -32,8 +32,8 @@ background-size: cover;
     flex-direction: column;
     justify-content: start;
     gap: 35px;
-    width: 100%;
-    height: 50vh;
+    width: 50%;
+    height: 40vh;
     border:1px solid rgba(246, 242, 242, 0.996) ;
 
 }
@@ -59,7 +59,7 @@ background-size: cover;
 }
 
 .myimg3{
-    width: 100%;
+    width: 50%;
     height: 70vh;
     background-size: cover;
     background-image: url(https://static.wixstatic.com/media/38c4af340de54c78b4e1869be78ef1fd.jpg/v1/fill/w_3760,h_2116,fp_0.50_0.50,q_90,enc_avif,quality_auto/38c4af340de54c78b4e1869be78ef1fd.jpg);
@@ -71,10 +71,10 @@ background-size: cover;
     flex-direction: column;
     justify-content: start;
     gap: 35px;
-    width: 100%;
+    width: 50%;
     height: 50vh;
     border:1px solid rgba(246, 242, 242, 0.996) ;
-    margin-bottom: -20px;
+
 
 }
 .Spa h2{
@@ -204,4 +204,49 @@ background-size: cover;
     stroke: #e84a43;
     stroke-width: 1.5px;
     transition: fill .25s;
+}
+
+
+
+@media  ( max-width:1000px ) {
+    .card2{
+        width: 900px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+       
+    }
+
+    .myimg2{
+        background-size: cover;
+        background-position: center;
+        justify-content: center;
+    }
+    
+    .text2{
+       height: 300px; 
+    }
+}
+
+
+@media  ( max-width:1000px ) {
+    .card3{
+        width: 900px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+       
+    }
+
+    .myimg3{
+        background-size: cover;
+        background-position: center;
+        justify-content: center;
+    }
+    
+    .text3{
+       height: 300px; 
+    }
 }
