--- a/propos/propos.css
+++ b/propos/propos.css
@@ -47,7 +47,6 @@ header {
 
 .propos {
   width: 100%;
-  height: 90vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -55,15 +54,14 @@ header {
 }
 .propos .prode {
   width: 50%;
-  height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: end;
   gap: 20px;
 }
 .propos .prode .tx {
+  margin-top: 100px;
   width: 50%;
-  height: 80vh;
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -98,4 +96,70 @@ header {
   background-position: top;
   overflow: hidden;
   background-image: url(https://static.wixstatic.com/media/90cf860d8e3548fdb4808f676ee3e05d.jpg/v1/fill/w_828,h_872,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/90cf860d8e3548fdb4808f676ee3e05d.jpg);
+}
+
+@media (max-width: 900px) {
+  header {
+    width: 900px;
+    display: flex;
+    background-position: center;
+  }
+}
+@media (max-width: 1000px) {
+  .propos {
+    display: flex;
+    flex-direction: column;
+    flex-direction: column-reverse;
+    justify-content: center;
+    padding-top: 50px;
+  }
+  .propos .prode {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .propos .prode .tx {
+    width: 500px;
+  }
+  .pict {
+    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .img {
+    width: 200px;
+    height: 250px;
+    background-size: cover;
+    background-position: center;
+  }
+}
+@media screen and (max-width: 700px) {
+  header {
+    width: 900px;
+    display: flex;
+    background-position: center;
+  }
+  .lfb {
+    display: flex;
+  }
+  .nav1 {
+    display: none;
+  }
+  .logosPar {
+    gap: 25px;
+  }
+}
+.propos .prode {
+  margin-top: -150px;
+}
+.propos .prode .tx {
+  width: 250px;
+}
+
+.propos .pict .img {
+  width: 350px;
+  height: 450px;
+  background-size: cover;
+  background-position: center;
 }/*# sourceMappingURL=propos.css.map */
