--- a/voyager/voyager.css
+++ b/voyager/voyager.css
@@ -73,6 +73,12 @@ header {
   font-size: 36px;
 }
 
+.cards {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
 .firstcard {
   display: flex;
   flex-direction: column;
@@ -144,6 +150,7 @@ header {
 
 .com {
   width: 100%;
+  height: 70px;
   display: flex;
 }
 .com .leftsvg {
@@ -157,7 +164,7 @@ header {
   display: flex;
   justify-content: start;
   gap: 20px;
-  margin-left: 50px;
+  margin-left: 60px;
 }
 .com .leftsvg .comsvg .eye {
   display: flex;
@@ -172,11 +179,25 @@ header {
   align-items: center;
   justify-content: end;
   width: 50%;
-  margin-right: 10px;
+  margin-right: 35px;
 }
 .com .rightsvg .coeur {
   fill: transparent;
   stroke: #e84a43;
   stroke-width: 1.5px;
   transition: fill 0.25s;
+}
+
+.myimg2 {
+  background-image: url(https://static.wixstatic.com/media/f969ea5e4ea64a66af55f3cb06895101.jpg/v1/fill/w_3760,h_2116,fp_0.50_0.50,q_90,enc_avif,quality_auto/f969ea5e4ea64a66af55f3cb06895101.jpg);
+  width: 60%;
+  height: 70vh;
+  background-size: cover;
+}
+
+.myimg3 {
+  width: 60%;
+  height: 70vh;
+  background-size: cover;
+  background-image: url(https://static.wixstatic.com/media/ae5901bd4fda41009c4cc4a19bb70d05.jpg/v1/fill/w_2999,h_1999,al_c,q_90/ae5901bd4fda41009c4cc4a19bb70d05.webp);
 }/*# sourceMappingURL=voyager.css.map */
