--- a/propos/propos.css
+++ b/propos/propos.css
@@ -47,6 +47,7 @@ header {
 
 .propos {
   width: 100%;
+  height: 90vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,23 +55,24 @@ header {
 }
 .propos .prode {
   width: 50%;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: end;
   gap: 20px;
 }
-.propos .prode .tx {
-  margin-top: 100px;
+.propos .tx {
   width: 50%;
+  height: 60vh;
   display: flex;
   flex-direction: column;
   gap: 30px;
 }
-.propos .prode .tx h1 {
+.propos .tx h1 {
   font-weight: lighter;
   font-size: 36px;
 }
-.propos .prode .tx p {
+.propos .tx p {
   font-family: "EB Garamond", serif;
   font-weight: 400;
   letter-spacing: 0.02em;
@@ -85,81 +87,16 @@ header {
 
 .pict {
   display: flex;
-  align-items: end;
+  align-items: center;
+  justify-content: start;
   width: 50%;
-  height: 90vh;
+  margin-top: 140px;
 }
 .pict .img {
-  width: 472px;
-  height: 478px;
+  width: 450px;
+  height: 420px;
   background-size: cover;
   background-position: top;
   overflow: hidden;
   background-image: url(https://static.wixstatic.com/media/90cf860d8e3548fdb4808f676ee3e05d.jpg/v1/fill/w_828,h_872,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/90cf860d8e3548fdb4808f676ee3e05d.jpg);
-}
-
-@media (max-width: 900px) {
-  header {
-    width: 900px;
-    display: flex;
-    background-position: center;
-  }
-}
-@media (max-width: 1000px) {
-  .propos {
-    display: flex;
-    flex-direction: column;
-    flex-direction: column-reverse;
-    justify-content: center;
-    padding-top: 50px;
-  }
-  .propos .prode {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .propos .prode .tx {
-    width: 500px;
-  }
-  .pict {
-    margin-top: 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .img {
-    width: 200px;
-    height: 250px;
-    background-size: cover;
-    background-position: center;
-  }
-}
-@media screen and (max-width: 700px) {
-  header {
-    width: 900px;
-    display: flex;
-    background-position: center;
-  }
-  .lfb {
-    display: flex;
-  }
-  .nav1 {
-    display: none;
-  }
-  .logosPar {
-    gap: 25px;
-  }
-}
-.propos .prode {
-  margin-top: -150px;
-}
-.propos .prode .tx {
-  width: 250px;
-}
-
-.propos .pict .img {
-  width: 350px;
-  height: 450px;
-  background-size: cover;
-  background-position: center;
 }/*# sourceMappingURL=propos.css.map */
