--- a/style.css
+++ b/style.css
@@ -31,9 +31,9 @@ html{
     height: 100vh;
     position:fixed ;
     top: 20px;
-    left: 20px;
+    right: 20px;
     background-color:#2573DA;
-    justify-content: center;
+    /* justify-content: center; */
     flex-direction: column;
   
    
@@ -41,10 +41,14 @@ html{
  .nav2 ul{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     justify-content: center;
     align-items: center;
+ }
+
+ .nav2 ul a{
+    color: white;
  }
  .lfb{
     display: none;
@@ -494,12 +498,46 @@ main{
     @media screen and (max-width:600px){
         .lfb{
             display: flex;
+            right: 20px;
+            top: 20px;
+            left: 0;
+            position: relative;
+            z-index: 1000;
+        }
+        #check:checked ~ .nav2 {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
             width: 100%;
             height: 100vh;
+            position:fixed;
+            top: 0;
+            right:0;
+            background-color:#2573DA;
+         
            
-        }
+         }
+         #check:checked + .lfb > .burger .line2 {
+            display: none;
+         }
 
-        
+         #check:checked + .lfb > .burger .line1{
+            transform: rotate(45deg) translate(7.5px);
+            transition: 5s;
+         }
+         #check:checked + .lfb > .burger .line3{
+            transform: rotate(-45deg) translate(7.5px);
+            transition: 5s;
+         }
+
+        .nav2{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100vh;
+        }
         .nav1{
             display: none;
         }
