--- a/footer/footer.css
+++ b/footer/footer.css
@@ -7,6 +7,7 @@
 footer {
   background-color: pink;
   width: 100%;
+  height: 100vh;
 }
 footer .bleuicons {
   width: 100%;
@@ -34,12 +35,12 @@ footer .bleuicons .icons div {
 }
 footer .bleuicons .icons div i {
   color: white;
-  font-size: 22px;
+  font-size: 20px;
 }
 
 .parfot {
   width: 100%;
-  height: 50vh;
+  height: 40vh;
   display: grid;
   grid-template-columns: auto auto auto auto auto;
 }
@@ -92,26 +93,33 @@ footer .bleuicons .icons div i {
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 70vh;
 }
 .gray2 .foto {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   width: 50%;
-  background-color: green;
+  height: 70vh;
+  background-color: rgb(152, 148, 215);
 }
-.gray2 .foto .pic {
-  height: 30vh;
-  background-repeat: no-repeat;
-  background-image: url(https://static.wixstatic.com/media/90cf860d8e3548fdb4808f676ee3e05d.jpg/v1/fill/w_280,h_282,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/90cf860d8e3548fdb4808f676ee3e05d.jpg);
-}
-.gray2 .foto .txxx {
-  width: 30%;
+.gray2 .foto .tex {
   display: flex;
   flex-direction: column;
+  justify-content: start;
   align-items: center;
+  width: 25%;
   gap: 25px;
-  background-color: aqua;
+  background-color: greenyellow;
+  height: 70vh;
+}
+.gray2 .foto .pi {
+  width: 25%;
+  background-size: cover;
+  background-image: url(https://static.wixstatic.com/media/90cf860d8e3548fdb4808f676ee3e05d.jpg/v1/fill/w_280,h_282,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/90cf860d8e3548fdb4808f676ee3e05d.jpg);
+}
+.gray2 .foto .pi .myimgg {
+  background-size: cover;
+  background-image: url(https://static.wixstatic.com/media/90cf860d8e3548fdb4808f676ee3e05d.jpg/v1/fill/w_280,h_282,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/90cf860d8e3548fdb4808f676ee3e05d.jpg);
 }
 .gray2 .news {
   width: 50%;
