--- a/footer/footer.scss
+++ b/footer/footer.scss
@@ -7,7 +7,7 @@
 footer{
     background-color: pink;
     width: 100%;
-    // height: 100vh;
+    height: 100vh;
 
     .bleuicons{
         width: 100%;
@@ -35,7 +35,7 @@ div {
 
     i{
         color: white;
-        font-size:22px;
+        font-size:20px;
         
     }
 }
@@ -45,7 +45,7 @@ div {
 
     .parfot{
         width: 100%;
-        height: 50vh;
+        height: 40vh;
         display: grid;
         grid-template-columns: auto auto auto auto auto;
 
@@ -82,7 +82,6 @@ div {
         height: 80vh;
         display: flex;
         flex-direction: column;
-        // flex-wrap: wrap;
       
         .btnpar{
             width: 100%;
@@ -99,9 +98,11 @@ div {
                 cursor: pointer;
             }
         }
-   
-        
-     }
+    }
+
+
+
+
 
      .gray2{
         background-color: pink;
@@ -109,32 +110,44 @@ div {
         justify-content: center;
         align-items: center;
         width: 100%;
-        // height: 70vh;
-        
+        height: 70vh;
+
+      
 .foto{
    display: flex;
    flex-direction: column;
-   justify-content: center;
    width: 50%;
-//    height: 70vh;
-   background-color: green;
-
-   .pic{
-  height: 30vh;
-  background-repeat: no-repeat;
-  background-image: url(https://static.wixstatic.com/media/90cf860d8e3548fdb4808f676ee3e05d.jpg/v1/fill/w_280,h_282,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/90cf860d8e3548fdb4808f676ee3e05d.jpg);
-   }
-
-   .txxx{
-    width: 30%;
-    // height: 70vh;
+   height: 70vh;
+   background-color: rgb(152, 148, 215);
+  
+  .tex{
     display: flex;
     flex-direction: column;
+    justify-content: start;
     align-items: center;
+    width: 25%;
     gap: 25px;
-    background-color:aqua;
-   }
+    background-color: greenyellow;
+    height: 70vh;
+
 }
+     .pi{
+        
+        width:25%;
+        background-size: cover;
+        background-image: url(https://static.wixstatic.com/media/90cf860d8e3548fdb4808f676ee3e05d.jpg/v1/fill/w_280,h_282,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/90cf860d8e3548fdb4808f676ee3e05d.jpg);
+        
+        .myimgg{
+            background-size: cover;
+            background-image: url(https://static.wixstatic.com/media/90cf860d8e3548fdb4808f676ee3e05d.jpg/v1/fill/w_280,h_282,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/90cf860d8e3548fdb4808f676ee3e05d.jpg);
+           }
+        
+        //    აქ ყველანაირად ვცადე ფოტო სადაა საერთოდ ვეღარ ვხედავ ვხედავდი და სურათი და ტექსტი ერთმანეთის გვერდი გვერდ არ იყო და ახლა სულ გაქრა
+     }     
+}
+
+
+
         
         .news{
             width:50%;
@@ -183,5 +196,5 @@ div {
                
             }
         }
-
+ 
     
