--- a/footer/footer.scss
+++ b/footer/footer.scss
@@ -79,13 +79,13 @@ div {
     .gray{
         background-color: #696969;
         width: 100%;
-        height: 80vh;
+        height: 95vh;
         display: flex;
         flex-direction: column;
       
         .btnpar{
             width: 100%;
-            height: 20vh;
+            margin-top: 35px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -105,7 +105,6 @@ div {
 
 
      .gray2{
-        background-color: pink;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -115,34 +114,39 @@ div {
       
 .foto{
    display: flex;
-   flex-direction: column;
-   width: 50%;
+   justify-content: center;
+   align-items: center;
+   width:70%;
    height: 70vh;
-   background-color: rgb(152, 148, 215);
+   gap: 10px;
   
   .tex{
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    width: 25%;
-    gap: 25px;
-    background-color: greenyellow;
-    height: 70vh;
+    justify-content: center;
+    align-items: start;
+    width: 40%;
+    gap: 30px;
+    height: 400px;
+
+    h3{
+     font-size: 20px;
+     font-family: "EB Garamond", serif;
+     font-weight: 600;
+     color: white;
+    }
+
+    span{
+        color: white;
+        line-height: 1.5em;
+        font-size: 15px;
+     
+    }
 
 }
      .pi{
-        
         width:25%;
-        background-size: cover;
-        background-image: url(https://static.wixstatic.com/media/90cf860d8e3548fdb4808f676ee3e05d.jpg/v1/fill/w_280,h_282,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/90cf860d8e3548fdb4808f676ee3e05d.jpg);
-        
-        .myimgg{
-            background-size: cover;
-            background-image: url(https://static.wixstatic.com/media/90cf860d8e3548fdb4808f676ee3e05d.jpg/v1/fill/w_280,h_282,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/90cf860d8e3548fdb4808f676ee3e05d.jpg);
-           }
-        
-        //    აქ ყველანაირად ვცადე ფოტო სადაა საერთოდ ვეღარ ვხედავ ვხედავდი და სურათი და ტექსტი ერთმანეთის გვერდი გვერდ არ იყო და ახლა სულ გაქრა
+       
      }     
 }
 
@@ -150,12 +154,12 @@ div {
 
         
         .news{
-            width:50%;
+            width:40%;
             height: 30vh;
             display: flex;
             flex-direction: column;
             justify-content: start;
-            align-items:center;
+            align-items:start;
 
             .form{
                 display: flex;
@@ -195,6 +199,38 @@ div {
             
                
             }
+
+            .ic2{
+                position: absolute;
+                display: flex;
+                gap: 15px;
+                bottom:-100px;
+                right: 250px;
+                color: white;
+                font-size: 23px;
+
+
+            }
         }
  
     
+        .smalltex{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            width: 50%;
+            gap: 30px;
+            margin: 0 auto;
+          
+
+            span{
+                color: white;
+                
+            }
+
+            p{
+                color: white;
+            }
+ 
+
+        }
