--- a/relaxer/relaxer.scss
+++ b/relaxer/relaxer.scss
@@ -244,3 +244,8 @@ header{
     background-size: cover;
     background-image: url(https://static.wixstatic.com/media/38c4af340de54c78b4e1869be78ef1fd.jpg/v1/fill/w_3760,h_2116,fp_0.50_0.50,q_90,enc_avif,quality_auto/38c4af340de54c78b4e1869be78ef1fd.jpg);
 }
+
+.foto .tex .foota{
+    color: #7AA9E6;
+    text-decoration: underline;
+ }
