--- a/style.css
+++ b/style.css
@@ -493,107 +493,10 @@ main{
     stroke-width: 1.5px;
     transition: fill .25s;}
 
-/* /////////////////////////////////////////////////////////////////////////////////////////////// */
+/* /////////////////////////////////////////////////////////////////////////////////////////////// footerstyle */
 
-    @media screen and (max-width:600px){
-        .lfb{
-            display: flex;
-            right: 20px;
-            top: 20px;
-            left: 0;
-            position: relative;
-            z-index: 1000;
-        }
-        #check:checked ~ .nav2 {
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            width: 100%;
-            height: 100vh;
-            position:fixed;
-            top: 0;
-            right:0;
-            background-color:#2573DA;
-         
-           
-         }
-         #check:checked + .lfb > .burger .line2 {
-            display: none;
-         }
+.ic2 i{
+    color: white;
 
-         #check:checked + .lfb > .burger .line1{
-            transform: rotate(45deg) translate(7.5px);
-            transition: 5s;
-         }
-         #check:checked + .lfb > .burger .line3{
-            transform: rotate(-45deg) translate(7.5px);
-            transition: 5s;
-         }
-
-        .nav2{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100vh;
-        }
-        .nav1{
-            display: none;
-        }
-        .logosPar{
-            
-            gap:25px;}
-          
-    }
-    
-
-@media  (max-width:900px){ 
-    main{
-        width: 900px;
-        display: flex;
-        background-position: center;
-    }
-
-    .photos{
-        width: 900px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-    }
-    
-    .para{
-        width: 800px;
-        display: flex;
-        justify-content: center;
-        
-    }
-
-  .logosPar{
-    width: 900px;
-  }
-}
-
-@media ( max-width:1000px ) {
-    .firstcard {
-        width: 900px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-       
-      
-    }
-
-    .myimg{
-        background-size: cover;
-        background-position: center;
-      
-    }
-    
-    .text{
-       height: 300px; 
-    }
 }
 
