--- a/voyager/voyager.css
+++ b/voyager/voyager.css
@@ -200,4 +200,9 @@ header {
   height: 70vh;
   background-size: cover;
   background-image: url(https://static.wixstatic.com/media/ae5901bd4fda41009c4cc4a19bb70d05.jpg/v1/fill/w_2999,h_1999,al_c,q_90/ae5901bd4fda41009c4cc4a19bb70d05.webp);
+}
+
+.foto .tex .foota {
+  color: #7AA9E6;
+  text-decoration: underline;
 }/*# sourceMappingURL=voyager.css.map */
