--- a/footer/footer.css
+++ b/footer/footer.css
@@ -5,7 +5,7 @@
 }
 
 footer {
-  background-color: pink;
+  margin-top: 80px;
   width: 100%;
   height: 100vh;
 }
@@ -163,13 +163,15 @@ footer .bleuicons .icons div i {
   cursor: pointer;
 }
 .gray2 .ic2 {
-  position: absolute;
+  width: 56%;
+  height: 100vh;
   display: flex;
+  justify-content: end;
+  align-items: end;
   gap: 15px;
-  bottom: -100px;
-  right: 250px;
   color: white;
   font-size: 23px;
+  left: 60px;
 }
 
 .smalltex {
