--- a/footer/footer.scss
+++ b/footer/footer.scss
@@ -5,7 +5,7 @@
 }
 
 footer{
-    background-color: pink;
+  margin-top: 80px;
     width: 100%;
     height: 100vh;
 
@@ -98,6 +98,8 @@ div {
                 cursor: pointer;
             }
         }
+
+        
     }
 
 
@@ -128,6 +130,7 @@ div {
     width: 40%;
     gap: 30px;
     height: 400px;
+   
 
     h3{
      font-size: 20px;
@@ -147,7 +150,10 @@ div {
      .pi{
         width:25%;
        
-     }     
+        
+     }   
+     
+
 }
 
 
@@ -201,15 +207,18 @@ div {
             }
 
             .ic2{
-                position: absolute;
+
+                width: 56%;
+                height: 100vh;
                 display: flex;
+                justify-content:end;
+                align-items: end;
                 gap: 15px;
-                bottom:-100px;
-                right: 250px;
                 color: white;
                 font-size: 23px;
-
-
+                left: 60px;
+    
+    
             }
         }
  
