--- a/propos/propos.css
+++ b/propos/propos.css
@@ -66,7 +66,7 @@ header {
   height: 60vh;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 20px;
 }
 .propos .tx h1 {
   font-weight: lighter;
@@ -99,4 +99,9 @@ header {
   background-position: top;
   overflow: hidden;
   background-image: url(https://static.wixstatic.com/media/90cf860d8e3548fdb4808f676ee3e05d.jpg/v1/fill/w_828,h_872,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/90cf860d8e3548fdb4808f676ee3e05d.jpg);
+}
+
+.foto .tex .foota {
+  color: #7AA9E6;
+  text-decoration: underline;
 }/*# sourceMappingURL=propos.css.map */
