--- a/propos/propos.scss
+++ b/propos/propos.scss
@@ -72,7 +72,7 @@ gap: 20px; }
     height: 60vh;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 20px;
 
     h1{
       font-weight: lighter;
@@ -114,3 +114,7 @@ gap: 20px; }
 
 }
 
+.foto .tex .foota{
+    color: #7AA9E6;
+    text-decoration: underline;
+ }
