--- a/videos/videoresp.css
+++ b/videos/videoresp.css
@@ -14,4 +14,8 @@
   .myvideo {
     width: 900px;
   }
+}
+.foto .tex .foota {
+  color: #7AA9E6;
+  text-decoration: underline;
 }/*# sourceMappingURL=videoresp.css.map */
