--- a/footer/footer.scss
+++ b/footer/footer.scss
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 footer{
   margin-top: 80px;
     width: 100%;
@@ -98,6 +102,24 @@ div {
                 cursor: pointer;
             }
         }
+
+        
+button{
+    border: none;
+    background-color: #696969;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+    cursor: pointer;
+}
+
+.fl{
+    width: 20px;
+    height: 20px;
+    transform: rotate(180deg);
+    fill:#87B0E6;
+}
+
 
         
     }
