--- a/footer/footrespo.css
+++ b/footer/footrespo.css
@@ -1,15 +1,61 @@
 @media (max-width: 1100px) {
-  .foto {
+  * {
+    text-align: center !important;
+  }
+  .pi img {
+    width: 230px;
+  }
+  .gray2 .foto .pi {
+    width: 100% !important;
+  }
+  .gray2 .foto {
     display: flex;
     flex-direction: column;
+    padding-top: 20px;
+  }
+  footer {
+    height: auto !important;
+  }
+  .gray2 .foto .tex {
+    width: 60% !important;
+    display: flex;
+    align-items: center !important;
+  }
+  .news {
+    align-items: center !important;
   }
 }
 @media (max-width: 1000px) {
   footer {
-    width: 600px;
+    height: auto !important;
   }
   .parfot {
     width: 50%;
     flex-wrap: wrap;
+  }
+}
+@media (max-width: 800px) {
+  .bleuicons {
+    height: auto !important;
+    padding: 20px 0px;
+  }
+  .icons {
+    gap: 10px;
+    height: auto;
+    flex-wrap: wrap;
+  }
+  .icons > div {
+    width: 150px !important;
+  }
+  .gray2 {
+    flex-direction: column !important;
+    height: auto !important;
+  }
+  .news {
+    gap: 20px;
+  }
+  .gray {
+    gap: 20px;
+    padding-bottom: 30px;
   }
 }/*# sourceMappingURL=footrespo.css.map */
