--- a/footer/footrespo.scss
+++ b/footer/footrespo.scss
@@ -1,10 +1,35 @@
-
 @media (max-width:1100px) {
 
-   .foto{
-display: flex;
-flex-direction: column;
+    *{
+        text-align: center !important;
+    }
+    .pi img{
+        width: 230px;
+    }
+    .gray2 .foto .pi {
+         width: 100% !important}
+
+    .gray2  .foto{
+        display: flex;
+        flex-direction: column;
+        // align-items: start !important;
+        // padding-left: 15%;
+        padding-top: 20px;
    } 
+   footer{
+    // width: 600px;
+    height: auto !important;
+    
+}
+.gray2 .foto .tex {
+    width: 60% !important;
+    display: flex;
+    align-items: center !important;
+}
+.news{
+    align-items: center !important;
+
+}
 
    
 }
@@ -13,7 +38,9 @@ flex-direction: column;
 
 @media (max-width:1000px) {
     footer{
-        width: 600px;
+        // width: 600px;
+        height: auto !important;
+
         
     }
     .parfot{
@@ -23,3 +50,31 @@ flex-direction: column;
     
 
 }
+@media (max-width:800px) {
+    .bleuicons{
+        height: auto !important;
+        padding: 20px 0px;
+    }
+    .icons{
+        // flex-direction: column;
+        gap: 10px;
+        height: auto;
+        flex-wrap: wrap;
+    }
+    .icons > div{
+        width: 150px !important;
+    }
+  .gray2{
+    flex-direction: column !important;
+    height: auto !important;
+  }
+
+  .news{
+    gap:20px
+  }
+  .gray{
+    gap: 20px;
+    padding-bottom: 30px
+  }
+}
+
