--- a/propos/propos.css
+++ b/propos/propos.css
@@ -5,6 +5,10 @@
   text-decoration: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 header {
   background-color: #F2F2F2;
   display: flex;
@@ -15,31 +19,75 @@ header {
   left: 0;
   z-index: 1;
 }
-
-.nav1 {
+header .burger {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+header .burgerline {
+  width: 30px;
+  height: 3px;
+  border-radius: 5px;
+  background-color: black;
+}
+header #check {
+  display: none;
+}
+header #check:checked + .nav2 {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background-color: #2573DA;
+  /* justify-content: center; */
+  flex-direction: column;
+}
+header .nav2 ul {
+  display: flex;
+  flex-direction: column;
+  /* width: 100%;
+  height: 100%; */
+  justify-content: center;
+  align-items: center;
+}
+header .nav2 ul a {
+  color: white;
+}
+header .lfb {
+  display: none;
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  z-index: 1000;
+}
+header .nav2 {
+  display: none;
+}
+header .nav1 {
   width: 50%;
   display: flex;
   justify-content: end;
   align-items: center;
 }
-.nav1 ul {
+header .nav1 ul {
   display: flex;
   list-style: none;
   gap: 25px;
 }
-.nav1 ul li a {
+header .nav1 ul li a {
   color: #696969;
   font-size: medium;
 }
-
-.logos {
+header .logos {
   width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 15px;
 }
-.logos i {
+header .logos i {
   color: grey;
   cursor: pointer;
   font-size: 20px;
