--- a/propos/propos.scss
+++ b/propos/propos.scss
@@ -5,6 +5,13 @@
     text-decoration: none;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
+
+
+
 header{
     background-color: #F2F2F2;
     display: flex;
@@ -14,7 +21,62 @@ header{
     top: 0;
     left:0;
     z-index: 1;
+
+    
+.burger{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
+.burgerline{
+    width: 30px;
+    height: 3px;
+    border-radius: 5px;
+    background-color: black;
+ 
+}
+ #check{
+    display: none;
+ }
+
+ #check:checked + .nav2 {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    position:fixed ;
+    top: 20px;
+    right: 20px;
+    background-color:#2573DA;
+    /* justify-content: center; */
+    flex-direction: column;
+  
+   
+ }
+ .nav2 ul{
+    display: flex;
+    flex-direction: column;
+    /* width: 100%;
+    height: 100%; */
+    justify-content: center;
+    align-items: center;
+ }
+
+ .nav2 ul a{
+    color: white;
+ }
+ .lfb{
+    display: none;
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    z-index: 1000;
+ }
+
+ .nav2{
+    display: none;
+ }
+
+
 .nav1{
     width: 50%;
     display: flex; 
@@ -46,6 +108,8 @@ header{
     
         }
    
+}
+
 }
 
 .propos{
