--- a/footer/footer.css
+++ b/footer/footer.css
@@ -4,10 +4,6 @@
   box-sizing: border-box;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 footer {
   margin-top: 80px;
   width: 100%;
@@ -72,9 +68,22 @@ footer .bleuicons .icons div i {
 .gray {
   background-color: #696969;
   width: 100%;
-  height: 95vh;
   display: flex;
   flex-direction: column;
+}
+.gray .btnn {
+  border: none;
+  background-color: #696969;
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
+  cursor: pointer;
+}
+.gray .fl {
+  width: 20px;
+  height: 20px;
+  transform: rotate(180deg);
+  fill: #87B0E6;
 }
 .gray .btnpar {
   width: 100%;
@@ -90,34 +99,18 @@ footer .bleuicons .icons div i {
   border-width: 1px;
   cursor: pointer;
 }
-.gray button {
-  border: none;
-  background-color: #696969;
-  display: flex;
-  justify-content: center;
-  padding: 20px 0;
-  cursor: pointer;
-}
-.gray .fl {
-  width: 20px;
-  height: 20px;
-  transform: rotate(180deg);
-  fill: #87B0E6;
-}
 
 .gray2 {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 70vh;
 }
 .gray2 .foto {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 70%;
-  height: 70vh;
   gap: 10px;
 }
 .gray2 .foto .tex {
@@ -145,7 +138,6 @@ footer .bleuicons .icons div i {
 }
 .gray2 .news {
   width: 40%;
-  height: 30vh;
   display: flex;
   flex-direction: column;
   justify-content: start;
@@ -167,6 +159,7 @@ footer .bleuicons .icons div i {
   color: white;
 }
 .gray2 .news .form .inpp {
+  background-color: rgb(4, 255, 0);
   height: 30px;
   border-color: white;
   background-color: #696969;
@@ -182,7 +175,7 @@ footer .bleuicons .icons div i {
 }
 .gray2 .ic2 {
   width: 56%;
-  height: 100vh;
+  height: 50px;
   display: flex;
   justify-content: end;
   align-items: end;
