--- a/propos/propos.css
+++ b/propos/propos.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
+  list-style: none;
 }
 
 html {
@@ -19,75 +20,37 @@ header {
   left: 0;
   z-index: 1;
 }
-header .burger {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-header .burgerline {
-  width: 30px;
-  height: 3px;
-  border-radius: 5px;
-  background-color: black;
+header .nav2 {
+  display: none;
 }
 header #check {
   display: none;
 }
-header #check:checked + .nav2 {
-  display: flex;
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  background-color: #2573DA;
-  /* justify-content: center; */
-  flex-direction: column;
-}
-header .nav2 ul {
-  display: flex;
-  flex-direction: column;
-  /* width: 100%;
-  height: 100%; */
-  justify-content: center;
-  align-items: center;
-}
-header .nav2 ul a {
-  color: white;
-}
-header .lfb {
-  display: none;
-  position: fixed;
-  right: 20px;
-  top: 20px;
-  z-index: 1000;
-}
-header .nav2 {
-  display: none;
-}
-header .nav1 {
+
+.nav1 {
   width: 50%;
   display: flex;
   justify-content: end;
   align-items: center;
 }
-header .nav1 ul {
+.nav1 ul {
   display: flex;
   list-style: none;
   gap: 25px;
 }
-header .nav1 ul li a {
+.nav1 ul li a {
   color: #696969;
   font-size: medium;
 }
-header .logos {
+
+.logos {
   width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 15px;
 }
-header .logos i {
+.logos i {
   color: grey;
   cursor: pointer;
   font-size: 20px;
@@ -152,4 +115,6 @@ header .logos i {
 .foto .tex .foota {
   color: #7AA9E6;
   text-decoration: underline;
-}/*# sourceMappingURL=propos.css.map */
+}
+
+/* ///////////////////////////////////////////////////////////////// bureger *//*# sourceMappingURL=propos.css.map */
