--- a/propos/propos.scss
+++ b/propos/propos.scss
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    list-style: none;
 }
 
 html{
@@ -22,59 +23,15 @@ header{
     left:0;
     z-index: 1;
 
-    
-.burger{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+    .nav2{
+        display: none;
+    }
+
+    #check{
+        display: none;
+    }
 }
-.burgerline{
-    width: 30px;
-    height: 3px;
-    border-radius: 5px;
-    background-color: black;
- 
-}
- #check{
-    display: none;
- }
 
- #check:checked + .nav2 {
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    position:fixed ;
-    top: 20px;
-    right: 20px;
-    background-color:#2573DA;
-    /* justify-content: center; */
-    flex-direction: column;
-  
-   
- }
- .nav2 ul{
-    display: flex;
-    flex-direction: column;
-    /* width: 100%;
-    height: 100%; */
-    justify-content: center;
-    align-items: center;
- }
-
- .nav2 ul a{
-    color: white;
- }
- .lfb{
-    display: none;
-    position: fixed;
-    right: 20px;
-    top: 20px;
-    z-index: 1000;
- }
-
- .nav2{
-    display: none;
- }
 
 
 .nav1{
@@ -110,7 +67,7 @@ header{
    
 }
 
-}
+
 
 .propos{
     width: 100%;
@@ -182,3 +139,20 @@ gap: 20px; }
     color: #7AA9E6;
     text-decoration: underline;
  }
+
+ 
+/* ///////////////////////////////////////////////////////////////// bureger */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
