--- a/relaxer/relaxer.scss
+++ b/relaxer/relaxer.scss
@@ -19,60 +19,7 @@ header{
     top: 0;
     left:0;
     z-index: 1;
-    
-.burger{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-}
-.burgerline{
-    width: 30px;
-    height: 3px;
-    border-radius: 5px;
-    background-color: black;
- 
-}
- #check{
-    display: none;
- }
-
- #check:checked + .nav2 {
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    position:fixed ;
-    top: 20px;
-    right: 20px;
-    background-color:#2573DA;
-    /* justify-content: center; */
-    flex-direction: column;
   
-   
- }
- .nav2 ul{
-    display: flex;
-    flex-direction: column;
-    /* width: 100%;
-    height: 100%; */
-    justify-content: center;
-    align-items: center;
- }
-
- .nav2 ul a{
-    color: white;
- }
- .lfb{
-    display: none;
-    position: fixed;
-    right: 20px;
-    top: 20px;
-    z-index: 1000;
- }
-
- .nav2{
-    display: none;
- }
-
 
 .nav1{
     width: 50%;
@@ -307,3 +254,98 @@ header{
     color: #7AA9E6;
     text-decoration: underline;
  }
+
+ 
+/* ///////////////////////////////////////////////////////////////// bureger */
+
+.burger{
+    display: flex;
+    flex-direction: column;
+    right: 20px;
+    top: 20px;
+    gap: 5px;
+    
+
+
+}
+
+.linexs{
+    width: 40px;
+    height: 5px;
+    background-color: #87B0E6;
+    border-radius: 5px;
+
+}
+
+.lines{
+    width: 40px;
+    height: 3px;
+    background-color: #87B0E6;
+    border-radius: 5px;
+
+}
+
+.linem{
+    width: 40px;
+    height: 2px;
+    background-color: #87B0E6;
+    border-radius: 5px;
+    
+}
+
+
+.labelforburger{
+    display: none;
+    position: relative;
+    z-index: 1000;
+}
+
+.labelforburger .burger{
+position: fixed;
+
+}
+
+.nav2{
+    display: none;
+}
+
+.nav2 a{
+    color: white;
+    font-size: 18px;
+}
+
+.nav2 ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+#check{
+    display: none;
+}
+#check:checked + .nav2 {
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    background-color:#87B0E6;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+
+}
+
+@media screen and (max-width:900px) {
+    .labelforburger{
+        display: flex;
+   
+    }
+
+    .nav1{
+        display: none;
+    }
+    
+}
