--- a/videos/videos.css
+++ b/videos/videos.css
@@ -19,64 +19,19 @@ header {
   left: 0;
   z-index: 1;
 }
-header .burger {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-header .burgerline {
-  width: 30px;
-  height: 3px;
-  border-radius: 5px;
-  background-color: black;
-}
-header #check {
-  display: none;
-}
-header #check:checked + .nav2 {
-  display: flex;
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  background-color: #2573DA;
-  /* justify-content: center; */
-  flex-direction: column;
-}
-header .nav2 ul {
-  display: flex;
-  flex-direction: column;
-  /* width: 100%;
-  height: 100%; */
-  justify-content: center;
-  align-items: center;
-}
-header .nav2 ul a {
-  color: white;
-}
-header .lfb {
-  display: none;
-  position: fixed;
-  right: 20px;
-  top: 20px;
-  z-index: 1000;
-}
-header .nav2 {
-  display: none;
-}
-header .nav1 {
+
+.nav1 {
   width: 50%;
   display: flex;
   justify-content: end;
   align-items: center;
 }
-header .nav1 ul {
+.nav1 ul {
   display: flex;
   list-style: none;
   gap: 25px;
 }
-header .nav1 ul li a {
+.nav1 ul li a {
   color: #696969;
   font-size: medium;
 }
@@ -160,18 +115,87 @@ header .nav1 ul li a {
   width: 500px;
 }
 
-.inppar {
+.foota {
+  color: #83B0E6;
+}
+
+/* ///////////////////////////////////////////////////////////////// bureger */
+.burger {
   display: flex;
+  flex-direction: column;
+  right: 20px;
+  top: 20px;
+  gap: 5px;
+}
+
+.linexs {
+  width: 40px;
+  height: 5px;
+  background-color: #87B0E6;
+  border-radius: 5px;
+}
+
+.lines {
+  width: 40px;
+  height: 3px;
+  background-color: #87B0E6;
+  border-radius: 5px;
+}
+
+.linem {
+  width: 40px;
+  height: 2px;
+  background-color: #87B0E6;
+  border-radius: 5px;
+}
+
+.labelforburger {
+  display: none;
+  position: relative;
+  z-index: 1000;
+}
+
+.labelforburger .burger {
+  position: fixed;
+}
+
+.nav2 {
+  display: none;
+}
+
+.nav2 a {
+  color: white;
+  font-size: 18px;
+}
+
+.nav2 ul {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  background-color: red;
 }
-.inppar inp {
-  background-color: transparent;
-  border: none;
-  color: black;
-  outline: none;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 14px;
+
+#check {
+  display: none;
+}
+
+#check:checked + .nav2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #87B0E6;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
+@media screen and (max-width: 900px) {
+  .labelforburger {
+    display: flex;
+  }
+  .nav1 {
+    display: none;
+  }
 }/*# sourceMappingURL=videos.css.map */
