--- a/voyager/voyager.css
+++ b/voyager/voyager.css
@@ -205,4 +205,85 @@ header {
 .foto .tex .foota {
   color: #7AA9E6;
   text-decoration: underline;
+}
+
+/* ///////////////////////////////////////////////////////////////// bureger */
+.burger {
+  display: flex;
+  flex-direction: column;
+  right: 20px;
+  top: 20px;
+  gap: 5px;
+}
+
+.linexs {
+  width: 40px;
+  height: 5px;
+  background-color: #87B0E6;
+  border-radius: 5px;
+}
+
+.lines {
+  width: 40px;
+  height: 3px;
+  background-color: #87B0E6;
+  border-radius: 5px;
+}
+
+.linem {
+  width: 40px;
+  height: 2px;
+  background-color: #87B0E6;
+  border-radius: 5px;
+}
+
+.labelforburger {
+  display: none;
+  position: relative;
+  z-index: 1000;
+}
+
+.labelforburger .burger {
+  position: fixed;
+}
+
+.nav2 {
+  display: none;
+}
+
+.nav2 a {
+  color: white;
+  font-size: 18px;
+}
+
+.nav2 ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#check {
+  display: none;
+}
+
+#check:checked + .nav2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #87B0E6;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
+@media screen and (max-width: 900px) {
+  .labelforburger {
+    display: flex;
+  }
+  .nav1 {
+    display: none;
+  }
 }/*# sourceMappingURL=voyager.css.map */
